# cipher-talk

./: .gitignore  .vercelignore  README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  package.nw.json  tailwind.config.ts  tsconfig.json
.cursor/rules/: cipher-talk-md.mdc
.github/workflows/: desktop-build.yml
app/: globals.css  layout.tsx  page.tsx
app/admin/: page.tsx
app/chat/: page.tsx
app/login/: page.tsx
app/register/: page.tsx
app/settings/: page.tsx
build-resources/: entitlements.mac.plist
cipher-talk-mobile/: README.md  package_config.json.bak  pubspec.yaml
cipher-talk-mobile/lib/: app.dart  main.dart
cipher-talk-mobile/test/: widget_test.dart
cipher-talk-mobile/windows/: CMakeLists.txt
components/: HeroSection.tsx  HeroSection.tsx.bak  InfoCards.tsx  Navbar.tsx  Sandbox.tsx  ThemeProvider.tsx
components/chat/: BottomNavBar.tsx  ChatWindow.tsx  DisappearingMessages.tsx  EncryptionIndicator.tsx  MessageBubble.tsx  SearchUserModal.tsx  (+3 more)
desktop/: build.bat  generate-updater-json.mjs  index.html  neutralino.config.json
docs/: ANALYSIS.md  ANDROID_PLAN.md  E2EE.md  GITHUB_RELEASE_TEMPLATE.md
electron/: main.js  preload.js
lib/: ciphers.ts  cryptoUtils.ts  githubReleases.ts  i18n.ts  legal.ts  roles.ts  supabaseClient.ts
scripts/: build-nwjs-win.bat  download-nwjs.mjs  generate-icons.mjs
sql/: add_role_column  admin_logs.sql  e2ee_setup.sql  realtime_chat_setup.sql
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
stores/: useSettingsStore.ts
(+97 files in other folders)
