[package]
name = "cipher-talk"
version = "0.1.0"
description = "Cipher Talk — Private Encrypted Messenger with E2EE"
authors = ["CipherTalk Team"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "cipher_talk_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
    "tray-icon",
    "image-ico",
    "image-png",
] }
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = { version = "2", features = ["default-tls"] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
